--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@atlaskit/css-reset": "^2.0.0",
+    "@atlaskit/navigation": "^31.0.0",
     "@storybook/react": "^3.4.1",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
