--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.1.4",
+    "css-box-model": "^0.0.13",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
@@ -86,7 +87,7 @@
     "puppeteer": "^1.3.0",
     "raf-stub": "^2.0.2",
     "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react-dom": "^16.3.2",
     "react-test-renderer": "^16.3.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.0",
